<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MiTVShop</string>
    <string name="device_shop_cart_checkout_total_price">￥%1$s</string>
    <string name="device_shop_order_goods_item_count_fmt">× %d</string>
    <string name="hdplayer">高清播放器</string>

    <string name="deliver_time">选择送货时间</string>

    <string name="deliver_time_no_limit">不限送货时间</string>
    <string name="deliver_time_no_limit_2">周一至周日</string>

    <string name="deliver_time_working_day">工作日送货</string>
    <string name="deliver_time_working_day_2">周一至周五</string>

    <string name="deliver_time_holiday_day">双休日、假日送货</string>
    <string name="deliver_time_holiday_day_2">周六至周日</string>

    <string name="invoice_title">选择发票类型</string>

    <string name="invoice_electron">电子发票</string>
    <string name="invoice_personal">个人发票</string>
    <string name="invoice_company">公司发票</string>
    <string name="invoice_electron_desc">电子发票是税务局认可的有效凭证，可作为售后维权凭据，不随商品寄送。开票后不可更换纸质发票，如需报销请选择普通发票。</string>

    <string name="btn_ok">确定</string>
    <string name="input_company_name">输入公司名称</string>

    <string name="fail_to_add_address_list">无法获取地址信息</string>
    <string name="select_address">选择地址</string>
    <string name="use_new_address">使用新地址</string>

    <string name="address_name">收货人姓名</string>
    <string name="address_tel">电话</string>
    <string name="address_city">省/市/区</string>
    <string name="address_city_template">%1$s/%2$s/%3$s</string>
    <string name="address_address">路名或街道地址，门牌号</string>
    <string name="input_address">输入地址</string>

    <string name="select_goods">选择产品型号</string>
    <string name="order_detail">订单详情</string>
    <string name="deliver_info">送货信息</string>
    <string name="xiaomi_pay">小米钱包</string>
    <string name="ali_pay">支付宝</string>

    <string name="checkout_address">收货地址</string>
    <string name="checkout_invoice">发票信息</string>
    <string name="checkout_deliver">送货时间</string>

    <string name="price_info">商品总价：&lt;font color="#ff690b"&gt;&lt;big&gt;&lt;big&gt;&lt;big&gt;%s&lt;/big&gt;&lt;/big&gt;&lt;/big&gt;元&lt;/font&gt;</string>

    <string name="buy_info">商品总价：%1$s元\r\n快递配送 （运费%2$s元）</string>

    <string name="location_province">省份</string>
    <string name="location_city">城市</string>
    <string name="location_district">地区</string>

</resources>
