<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <include layout="@layout/title_view"/>



    <LinearLayout
            android:layout_width="1126px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="220px"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
            
            <com.xiaomi.mitv.shop.widget.MyEditText
                    android:id="@+id/et_name"
                    android:layout_width="550px"
                    android:layout_height="102px"
                    android:textSize="36px"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textColor="@color/white_60_transparent"
                    android:text="@string/address_name"
                    android:background="@drawable/input_selector"
                    android:imeOptions="actionNext"
                    android:alpha="0.6"/>

             <View
                     android:layout_width="wrap_content"
                     android:layout_height="1px"
                     android:layout_weight="1" />

            <com.xiaomi.mitv.shop.widget.MyEditText
                    android:id="@+id/et_tel"
                    android:layout_width="550px"
                    android:layout_height="102px"
                    android:textSize="36px"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:textColor="@color/white_60_transparent"
                    android:text="@string/address_tel"
                    android:background="@drawable/input_selector"
                    android:imeOptions="actionNext"
                    android:alpha="0.6"/>


        </LinearLayout>

    <EditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="102px"
            android:layout_marginTop="20px"
            android:textSize="36px"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/white_60_transparent"
            android:text="@string/address_city"
            android:background="@drawable/input_selector"
            android:imeOptions="actionNext"
            android:editable="false"
            android:alpha="0.6"/>

    <com.xiaomi.mitv.shop.widget.MyEditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="102px"
            android:textSize="36px"
            android:layout_marginTop="20px"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/white_60_transparent"
            android:text="@string/address_address"
            android:background="@drawable/input_selector"
            android:imeOptions="actionDone"
            android:alpha="0.6"/>


    <Button android:id="@+id/btn_ok"
            android:layout_width="290px"
            android:layout_height="102px"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="78px"
            android:background="@drawable/btn_normal"
            android:gravity="center"
            android:textSize="36px"
            android:text="@string/btn_ok"/>


    </LinearLayout>

        <View
                android:id="@+id/mask"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:visibility="gone"/>

</merge>