<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/root_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <include layout="@layout/title_view"/>

    <LinearLayout
            android:layout_width="1622px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="616px"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical|left">

            <ImageView
                    android:id="@+id/iv_goods_icon"
                    android:layout_width="match_parent"
                    android:layout_height="350px"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    android:background="@drawable/ic_launcher"/>

            <TextView
                    android:id="@+id/tv_goods_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="14px"
                    android:textSize="38px"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="35px"
                    android:background="@drawable/checkout_divider"/>

            <TextView
                    android:id="@+id/buy_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="30px"
                    android:lineSpacingExtra="16px"
                    android:gravity="left"
                    android:textSize="36px"/>

            <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="22px"
                    android:gravity="left"
                    android:textSize="36px"/>

        </LinearLayout>

        <View
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:layout_weight="1"/>

        <LinearLayout
                android:layout_width="890px"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="right|center_vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:textColor="@color/white"
                    android:textSize="52px"
                    android:text="@string/deliver_info"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/icon_off"
                    android:divider="@drawable/checkout_divider"
                    android:showDividers="middle"
                    android:layout_marginTop="30px"
                    android:padding="1px"
                    android:layout_gravity="center_vertical">

                <include
                        android:id="@+id/address_item"
                        layout="@layout/address_item"/>

                <include
                        android:id="@+id/deliver_time_item"
                        layout="@layout/switcher_item"/>
                <include
                        android:id="@+id/invoice_item"
                        layout="@layout/invoice_item"/>


            </LinearLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="62px"
                    android:layout_gravity="center_horizontal">

                <Button
                        android:id="@+id/ali_pay"
                        android:layout_width="420px"
                        android:layout_height="100px"
                        android:background="@drawable/btn_normal"
                        android:textSize="38px"
                        android:paddingLeft="118px"
                        android:layout_alignParentLeft="true"
                        android:includeFontPadding="false"
                        android:gravity="center_vertical"
                        android:drawablePadding="14px"
                        android:drawableStart="@drawable/alipay"
                        android:text="@string/ali_pay"/>

                <Button
                        android:id="@+id/xiaomi_pay"
                        android:layout_width="420px"
                        android:layout_height="100px"
                        android:background="@drawable/btn_normal"
                        android:textSize="38px"
                        android:paddingLeft="98px"
                        android:layout_alignParentRight="true"
                        android:includeFontPadding="false"
                        android:gravity="center_vertical"
                        android:drawablePadding="14px"
                        android:drawableLeft="@drawable/xiaomipay"
                        android:text="@string/xiaomi_pay"/>

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>




</FrameLayout>